# MathAcademyLogAnalyzer

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  README_zh.md  generate_analysis.py  pyproject.toml  requirements-dev.txt  requirements.txt  simple_charts.py
src/ma_log_pdf_parser/: chart_generator.py  course_parser.py  course_parser_backup.py  main.py  pdf_parser.py
